# search-rag-evaluation

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml
benchmark/: __init__.py  config.py  embedding.py  fusion.py  indexing.py  io_csv.py  logging_setup.py  matrix.py  metrics.py  models.py  pipeline.py  protocols.py  providers.py  rerank.py  reranking.py  runner.py  search.py  stats.py
benchmark/backends/: __init__.py  elasticsearch.py
benchmark/common/: __init__.py  cache.py  logging_setup.py  models.py  profiling.py  protocols.py  ranking.py
benchmark/datasets/: __init__.py  wands.py
benchmark/evaluation/: __init__.py  metrics.py  stats.py
benchmark/providers/: __init__.py  elasticsearch.py  inference.py
docs/: architecture.md  caching_design.md  example-results.md  experiment.md  methodology.md  methodology_fixes.md  plan.md  refactor_design.md
examples/runs/20260708T164458Z/: comparison_20260708T164458Z.csv  metrics_20260708T164458Z.csv  run_config_20260708T164458Z.json
notebooks/: wands.ipynb
scripts/: __init__.py  fetch_data.py  index.py  run.py  sweep.py  wait_for_es.py
tests/: conftest.py
tests/fixtures/golden/: .gitkeep  comparison_20260101T000000Z.csv  comparison_bm25_semantic_e5_20260101T000000Z.csv  metrics_20260101T000000Z.csv  metrics_bm25_20260101T000000Z.csv  result_20260101T000000Z.csv  result_bm25_20260101T000000Z.csv
tests/fixtures/wands_sample/: .gitkeep  label.csv  product.csv  query.csv
tests/integration/: .gitkeep  test_es_backend.py  test_es_lexical.py  test_runner.py
tests/unit/: .gitkeep  test_build_pipeline.py  test_config.py  test_es_backend.py  test_fusion.py  test_import_graph.py  test_indexing.py  test_io_csv.py  test_matrix.py  test_metrics.py  test_models.py  test_pipeline.py  test_protocols.py  test_providers.py  test_reproducibility.py  test_rerank.py  test_runner.py  test_schema_lint.py  test_search.py  test_stats.py  test_sweep.py  test_wands.py
tests/unit/common/: __init__.py  test_cache.py  test_models.py  test_profiling.py  test_protocols.py  test_ranking.py
tests/unit/evaluation/: __init__.py  test_metrics.py  test_stats.py
tests/unit/providers/: __init__.py  test_elasticsearch.py  test_inference.py
