[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchmark"
version = "0.0.0"
description = "Reproducible search-relevance benchmark harness (WANDS on ElasticSearch >= 8.15)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "scipy>=1.11",  # scipy.stats.false_discovery_control (BH/BY FDR) was added in 1.11
  "pyyaml>=6",    # config.py loads the §10 YAML config matrix
  "elasticsearch>=8.15,<9",  # ES client; matches ES server >=8.15 (§1.1). Ingest + search (Phase 9/10)
]

[tool.hatch.build.targets.wheel]
packages = ["benchmark"]

# ---------------------------------------------------------------------------
# eval environment — the operational CLI surface (README TL;DR).
#   wait-for-es / fetch-data : real, pure-infra helper scripts (scripts/).
#   index / run              : non-destructive placeholders, wired in Phase 11.
# Helper scripts live under the top-level scripts/ package so that benchmark/
# stays exactly the docs/architecture.md §11 module set.
# ---------------------------------------------------------------------------
[tool.hatch.envs.eval]
dependencies = []

[tool.hatch.envs.eval.scripts]
wait-for-es = "python -m scripts.wait_for_es"
fetch-data = "python -m scripts.fetch_data"
index = "python -m scripts.index {args}"
run = "python -m scripts.run {args}"
# eval:sweep — one-shot diagnostic parameter sweeps, reusing the runner. NON-frozen.
sweep = "python -m scripts.sweep {args}"

# ---------------------------------------------------------------------------
# dev environment — lint / type-check / test (plan §5).
#   hatch run dev:ruff check   and   hatch run dev:mypy benchmark
# ---------------------------------------------------------------------------
[tool.hatch.envs.dev]
dependencies = [
  "pytest",
  "ruff",
  "mypy",
]

[tool.hatch.envs.dev.scripts]
test = "pytest {args}"
lint = "ruff check {args}"
typecheck = "mypy benchmark {args}"

# ---------------------------------------------------------------------------
# notebook environment — interactive data analysis in notebooks/ (e.g. wands.ipynb).
#   hatch run notebook:lab   launches JupyterLab with these deps on the path.
# These are ISOLATED here — deliberately NOT in [project].dependencies or the eval
# env, so running evals / indexing never pulls pandas / duckdb / jupyter. numpy comes
# from the installed project; benchmark itself is importable for analysing results.
# ---------------------------------------------------------------------------
[tool.hatch.envs.notebook]
dependencies = [
  "jupyterlab",
  "pandas",
  "duckdb",
  "matplotlib",
]

[tool.hatch.envs.notebook.scripts]
lab = "jupyter lab {args}"

[tool.ruff]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
packages = ["benchmark"]

# numpy 2.5's bundled stubs use 3.12-only `type` statements, which mypy rejects when
# analyzing for python_version 3.11 (our supported floor). Skip following numpy's own
# stubs (its public API is still checked as `Any` at our call sites) rather than bumping
# the analyzed version or loosening global strictness. Targeted, minimal (§3 deps note).
[[tool.mypy.overrides]]
module = "numpy.*"
follow_imports = "skip"
follow_imports_for_stubs = true

# PyYAML ships no type stubs (types-PyYAML is a separate stub-only package). config.py uses only
# yaml.safe_load; ignore the missing-stub import rather than pulling a stubs dep for one call.
[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

# The elasticsearch client ships partial/dynamic types (namespaced sub-clients built at runtime);
# ignore the missing-stub import for the ES adapter rather than pulling a stubs dep (§9 backend).
[[tool.mypy.overrides]]
module = "elasticsearch.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
  "integration: live-ES tests (Phases 9-12); skipped when ES is unreachable (plan §5).",
]
